==> free-pdk/easy-pdk-programmer-software/Firmware/source/Src/fpdk.c <==
#include "fpdk.h"
#include "fpdkproto.h"
#include "main.h"
#include <string.h>
#include <stdlib.h>
#define _FPDK_CLK2_UP()      HAL_GPIO_WritePin( IC_IO_PA0_UART1_TX_GPIO_Port, IC_IO_PA0_UART1_TX_Pin, GPIO_PIN_SET )
#define _FPDK_CLK2_DOWN()    HAL_GPIO_WritePin( IC_IO_PA0_UART1_TX_GPIO_Port, IC_IO_PA0_UART1_TX_Pin, GPIO_PIN_RESET )
#define _FPDK_CLK_UP()       HAL_GPIO_WritePin( IC_IO_PA3_CLK_GPIO_Port, IC_IO_PA3_CLK_Pin, GPIO_PIN_SET )
#define _FPDK_CLK_DOWN()     HAL_GPIO_WritePin( IC_IO_PA3_CLK_GPIO_Port, IC_IO_PA3_CLK_Pin, GPIO_PIN_RESET )
#define _FPDK_SET_DAT_O(bit) HAL_GPIO_WritePin( IC_IO_PA4_GPIO_Port,     IC_IO_PA4_Pin,     bit?GPIO_PIN_SET:GPIO_PIN_RESET )
#define _FPDK_SET_DAT_F(bit) HAL_GPIO_WritePin( IC_IO_PA6_DAT_GPIO_Port, IC_IO_PA6_DAT_Pin, bit?GPIO_PIN_SET:GPIO_PIN_RESET )
#define _FPDK_GET_DAT()      HAL_GPIO_ReadPin(  IC_IO_PA6_DAT_GPIO_Port, IC_IO_PA6_DAT_Pin )
#define _FPDK_SET_CMT(bit)   HAL_GPIO_WritePin( IC_IO_PA7_USART1_RX_GPIO_Port, IC_IO_PA7_USART1_RX_Pin, bit?GPIO_PIN_SET:GPIO_PIN_RESET )

static void _FPDK_SetClkOutgoing(void)
{
  HAL_GPIO_WritePin( IC_IO_PA3_CLK_GPIO_Port, IC_IO_PA3_CLK_Pin, GPIO_PIN_RESET );
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA3_CLK_Pin, .Mode=GPIO_MODE_OUTPUT_PP, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA3_CLK_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetClkIncoming(void)
{
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA3_CLK_Pin, .Mode=GPIO_MODE_INPUT, .Pull=GPIO_PULLDOWN, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA3_CLK_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetDatOutgoing(void)
{
  HAL_GPIO_WritePin( IC_IO_PA6_DAT_GPIO_Port, IC_IO_PA6_DAT_Pin, GPIO_PIN_RESET );
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA6_DAT_Pin, .Mode=GPIO_MODE_OUTPUT_PP, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA6_DAT_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetDatIncoming(void)
{
  HAL_GPIO_WritePin( IC_IO_PA6_DAT_GPIO_Port, IC_IO_PA6_DAT_Pin, GPIO_PIN_RESET );
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA6_DAT_Pin, .Mode=GPIO_MODE_INPUT, .Pull=GPIO_PULLDOWN, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA6_DAT_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetPA4Outgoing(void)
{
  HAL_GPIO_WritePin( IC_IO_PA4_GPIO_Port, IC_IO_PA4_Pin, GPIO_PIN_RESET );
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA4_Pin, .Mode=GPIO_MODE_OUTPUT_PP, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA4_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetPA4Incoming(void)
{
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA4_Pin, .Mode=GPIO_MODE_INPUT, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA4_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetPA0Outgoing(void)
{
  HAL_GPIO_WritePin( IC_IO_PA0_UART1_TX_GPIO_Port, IC_IO_PA0_UART1_TX_Pin, GPIO_PIN_RESET );
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA0_UART1_TX_Pin, .Mode=GPIO_MODE_OUTPUT_PP, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA0_UART1_TX_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetPA0Incoming(void)
{
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA0_UART1_TX_Pin, .Mode=GPIO_MODE_INPUT, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA0_UART1_TX_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetPA7Outgoing(void)
{
  HAL_GPIO_WritePin( IC_IO_PA7_USART1_RX_GPIO_Port, IC_IO_PA7_USART1_RX_Pin, GPIO_PIN_RESET );
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA7_USART1_RX_Pin, .Mode=GPIO_MODE_OUTPUT_PP, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA7_USART1_RX_GPIO_Port, &GPIO_InitStruct);
}

static void _FPDK_SetPA7Incoming(void)
{
  GPIO_InitTypeDef GPIO_InitStruct = { .Pin=IC_IO_PA7_USART1_RX_Pin, .Mode=GPIO_MODE_INPUT, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(IC_IO_PA7_USART1_RX_GPIO_Port, &GPIO_InitStruct);
}

void FPDK_Init(void)
{
  HAL_SPI_DeInit(&hspi1);
  HAL_UART_DeInit(&huart1);

  HAL_TIM_PWM_Start(&htim15, TIM_CHANNEL_2);                                                       //start PWM output to generate -4.8V (50kHz, 50% duty)

  HAL_DAC_Start( &hdac, DAC_CHANNEL_1 );                                                           //enable DAC output channel 1
  HAL_DAC_Start( &hdac, DAC_CHANNEL_2 );                                                           //enable DAC output channel 2

  _dac_vdd = 0;
  _dac_vpp = 0;
  HAL_DACEx_DualSetValue( &hdac, DAC_ALIGN_12B_R, _dac_vpp, _dac_vdd );                            //set 0 volt output for both channels

  HAL_GPIO_WritePin( DCDC15VOLT_ENABLE_OUT_GPIO_Port, DCDC15VOLT_ENABLE_OUT_Pin, GPIO_PIN_SET );   //enable DCDC 15V booster

  _hw_variant = FPDK_HWVAR_NONE;                                                                   //test for hardware variants

  GPIO_InitTypeDef GPIO_InitStruct0 = { .Pin=HW_VARIANT_DET0_Pin, .Mode=GPIO_MODE_INPUT, .Pull=GPIO_PULLUP, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(HW_VARIANT_DET0_GPIO_Port, &GPIO_InitStruct0);
  GPIO_InitTypeDef GPIO_InitStruct1 = { .Pin=HW_VARIANT_DET1_Pin, .Mode=GPIO_MODE_INPUT, .Pull=GPIO_PULLUP, .Speed=GPIO_SPEED_FREQ_HIGH };
  HAL_GPIO_Init(HW_VARIANT_DET1_GPIO_Port, &GPIO_InitStruct1);

  uint32_t hwdet = (HAL_GPIO_ReadPin(HW_VARIANT_DET0_GPIO_Port, HW_VARIANT_DET0_Pin)?0:1) |
                   (HAL_GPIO_ReadPin(HW_VARIANT_DET1_GPIO_Port, HW_VARIANT_DET1_Pin)?0:2);

  switch( hwdet )
  {
    case 1: _hw_variant = FPDK_HWVAR_MINI_PILL; break;

    default:
      _hw_variant = FPDK_HWVAR_NONE;
  }

  if( FPDK_HWVAR_MINI_PILL == _hw_variant )                                                        //reconfigure ADC to match hardware variant
  {
    HAL_ADC_DeInit(&hadc);
    HAL_ADC_Init(&hadc);
    ADC_ChannelConfTypeDef sConfig = {0};
    sConfig.Channel = ADC_CHANNEL_0;
    sConfig.Rank = ADC_RANK_CHANNEL_NUMBER;
    sConfig.SamplingTime = ADC_SAMPLETIME_239CYCLES_5;
    HAL_ADC_ConfigChannel(&hadc, &sConfig);
    sConfig.Channel = ADC_CHANNEL_1;
    HAL_ADC_ConfigChannel(&hadc, &sConfig);
    sConfig.Channel = ADC_CHANNEL_VREFINT;
    HAL_ADC_ConfigChannel(&hadc, &sConfig);
  }

  _adc_vref = 0;
  _adc_vdd = 0;
  _adc_vpp = 0;
  HAL_ADCEx_Calibration_Start(&hadc);                                                              //calibrate ADC
  HAL_ADC_Start_DMA(&hadc, (uint32_t*)_adcDMABuffer, 2*(8*3) );                                    //start ADC (double buffer DMA with completion callbacks)
  HAL_TIM_Base_Start(&htim1);                                                                      //start tim1 to trigger ADC conversions

  HAL_TIM_Base_Start(&htim2);                                                                      //start tim2 for frequency measurement

  _FPDK_SetClkIncoming();
  _FPDK_SetDatIncoming();
  _FPDK_SetPA4Incoming();
  _FPDK_SetPA0Incoming();
  _FPDK_SetPA7Incoming();
}

void FPDK_DeInit(void)
{
  HAL_DACEx_DualSetValue( &hdac, DAC_ALIGN_12B_R, 0, 0 );                                          //set 0 volt output for both channels
  HAL_GPIO_WritePin( DCDC15VOLT_ENABLE_OUT_GPIO_Port, DCDC15VOLT_ENABLE_OUT_Pin, GPIO_PIN_RESET ); //disable DCDC 15V booster
  HAL_ADC_Stop( &hadc );                                                                           //stop ADC
  _FPDK_SetClkIncoming();
  _FPDK_SetDatIncoming();
  _FPDK_SetPA4Incoming();
  _FPDK_SetPA0Incoming();
  _FPDK_SetPA7Incoming();
}

void FPDK_SetLeds(uint32_t val)
{
  HAL_GPIO_WritePin( LED1_OUT_GPIO_Port, LED1_OUT_Pin, (val&1)?GPIO_PIN_RESET:GPIO_PIN_SET );
  HAL_GPIO_WritePin( LED2_OUT_GPIO_Port, LED2_OUT_Pin, (val&2)?GPIO_PIN_RESET:GPIO_PIN_SET );
  HAL_GPIO_WritePin( LED3_OUT_GPIO_Port, LED3_OUT_Pin, (val&4)?GPIO_PIN_RESET:GPIO_PIN_SET );
}

void FPDK_SetLed(uint32_t led, bool enable)
{
  switch( led )
  {
    case 1: HAL_GPIO_WritePin( LED1_OUT_GPIO_Port, LED1_OUT_Pin, enable?GPIO_PIN_RESET:GPIO_PIN_SET );
      break;
    case 2: HAL_GPIO_WritePin( LED2_OUT_GPIO_Port, LED2_OUT_Pin, enable?GPIO_PIN_RESET:GPIO_PIN_SET );
      break;
    case 3: HAL_GPIO_WritePin( LED3_OUT_GPIO_Port, LED3_OUT_Pin, enable?GPIO_PIN_RESET:GPIO_PIN_SET );
      break;

    default:
      break;
  }
}

bool FPDK_IsButtonPressed(void)
{
  static uint32_t press_count = 0;
  static uint32_t tick_press_checked = 0;

  if( HAL_GetTick() > tick_press_checked )
  {
    tick_press_checked = HAL_GetTick()+1;
    if( HAL_GPIO_ReadPin( USER_BTN_IN_GPIO_Port, USER_BTN_IN_Pin ) )
      press_count++;
    else
      press_count = 0;
  }
  return(press_count>10);
}

bool FPDK_SetVDD(uint32_t mV, uint32_t stabelizeDelayUS)
{
  _dac_vdd = (mV*4095) / FPDK_VDD_DAC_MAX_MV;

  if( _dac_vdd>4095 )
    _dac_vdd = 4095;

  HAL_DACEx_DualSetValue( &hdac, DAC_ALIGN_12B_R, _dac_vpp, _dac_vdd );                            //set VDD

  if( stabelizeDelayUS )
    _FPDK_DelayUS(stabelizeDelayUS);

  return true;
}

bool FPDK_SetVPP(uint32_t mV, uint32_t stabelizeDelayUS)
{
  _dac_vpp = (mV*4095) / FPDK_VPP_DAC_MAX_MV;

  if( _dac_vpp>4095 )
    _dac_vpp = 4095;

  HAL_DACEx_DualSetValue( &hdac, DAC_ALIGN_12B_R, _dac_vpp, _dac_vdd );                            //set VPP

  if( stabelizeDelayUS )
    _FPDK_DelayUS(stabelizeDelayUS);

  return true;
}

static void _FPDK_CalibrateNext(uint32_t steps)
{
  for( ; steps>0; )
  {
    if( steps>16 )
    {
      _spiSendPulses = 16;
      steps -= 16;
    }
    else
    {
      _spiSendPulses = steps;
      steps = 0;
    }

    uint32_t timeoutTick = HAL_GetTick() + 1000;
    for( ; HAL_GetTick()<timeoutTick; )
    {
      if( !_spiSendPulses && (_spiMeasureBlockCounter>0) )
        break;
    }
  }
}

static int _FPDK_CalibrateBG(const uint8_t minval, const uint8_t maxval, const uint8_t step)
{
  _spiBlocksMeasure = 1;
  _FPDK_SetPA0Incoming();

  _FPDK_CalibrateNext(1+minval);

  for( uint16_t t=minval; t<=maxval; t+=step )
  {
    _FPDK_DelayUS(500);

    if( !HAL_GPIO_ReadPin(IC_IO_PA0_UART1_TX_GPIO_Port, IC_IO_PA0_UART1_TX_Pin) )
      return t;

    _FPDK_CalibrateNext(step);
  }
  return -1;
}
